--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <!-- 關於我 -->
         <section id="about" class="about">
             <div>
-                <img src="image/Ab/002.jpg" class="image_1"/>
+                <img src="image/me.jpg" class="image_1"/>
             </div>
             <div>
                 <table class="table_1">
@@ -113,10 +113,10 @@
                 <div class="image-slider">
                     <button class="prev" onclick="prevSlide(this.parentElement.parentElement)">&#10094;</button>
                     <div class="photos">
-                        <img src="image/EX_1/001.png" alt="photo1" class="photo">
-                        <img src="image/EX_1/002.png" alt="photo2" class="photo">
-                        <img src="image/EX_1/003.png" alt="photo3" class="photo">
-                        <img src="image/EX_1/004.png" alt="photo3" class="photo">
+                        <img src="image/ex_1-1.png" alt="photo1" class="photo">
+                        <img src="image/ex_1-2.png" alt="photo2" class="photo">
+                        <img src="image/ex_1-3.png" alt="photo3" class="photo">
+                        <img src="image/ex_1-4.png" alt="photo3" class="photo">
                     </div>
                     <button class="next" onclick="nextSlide(this.parentElement.parentElement)">&#10095;</button>
                 </div>
@@ -132,20 +132,18 @@
                 <div class="image-slider">
                     <button class="prev" onclick="prevSlide(this.parentElement.parentElement)">&#10094;</button>
                     <div class="photos">
-                        <img src="image/EX_2/001.jpg" alt="photo1" class="photo">
-                        <img src="image/EX_2/002.jpg" alt="photo2" class="photo">
-                        <img src="image/EX_2/003.jpg" alt="photo3" class="photo">
+                        <img src="image/ex_2-1.png" alt="photo1" class="photo">
+                        <img src="image/ex_2-2.png" alt="photo2" class="photo">
+                        <img src="image/ex_2-3.png" alt="photo3" class="photo">
+                        <img src="image/ex_2-4.png" alt="photo3" class="photo">
                     </div>
                     <button class="next" onclick="nextSlide(this.parentElement.parentElement)">&#10095;</button>
                 </div>
                 <div class="text-block">
-                    <P class="txt_2">熱舞社 參與大學熱舞社 期初小成發 
-                        <a href="https://www.youtube.com/watch?v=lwXPHTx6ttA" target="_blank">
-                        <img src="image/logo/YT.png" alt="YT" width="30" height="30" class="logo">
-                        </a>
+                    <P class="txt_2">寶可夢圖鑑資料庫系統
                     </P>
                     <span class="txt_3">
-                        參加大學熱舞社的期初小成果發表讓我感受到團隊合作的重要性。排練過程中，每個動作都需要反覆練習，也學會了如何互相鼓勵與修正。站上舞台的瞬間，所有努力都化為自信與成就感，讓我更加熱愛舞蹈。
+                        參與「寶可夢圖鑑資料庫系統」開發，負責資料庫設計與前後端整合。熟悉 MySQL、JSP 與 Servlet 技術，具備 SQL 資料操作與系統分析能力，能獨立完成資料管理與查詢功能設計，具良好團隊合作與專案執行經驗。
                     </span>
 
                 </div>
@@ -155,17 +153,56 @@
                 <div class="image-slider">
                     <button class="prev" onclick="prevSlide(this.parentElement.parentElement)">&#10094;</button>
                     <div class="photos">
-                        <img src="image/EX_3/001.jpg" alt="photo1" class="photo">
-                        <img src="image/EX_3/002.jpg" alt="photo2" class="photo">
-                        <img src="image/EX_3/003.jpg" alt="photo3" class="photo">
-                        <img src="image/EX_3/004.png" alt="photo3" class="photo">
+                        <img src="image/ex_3-1.png" alt="photo1" class="photo">
+                        <img src="image/ex_3-2.png" alt="photo2" class="photo">
+                        <img src="image/ex_3-3.png" alt="photo3" class="photo">
+                        <img src="image/ex_3-4.png" alt="photo3" class="photo">
                     </div>
                     <button class="next" onclick="nextSlide(this.parentElement.parentElement)">&#10095;</button>
                 </div>
                 <div class="text-block">
-                    <P class="txt_2">環境永續樂桃桃</P>
+                    <P class="txt_2">通識環境永續樂桃桃-成果發表</P>
                     <span class="txt_3">
-                        藉由桃園江夏堂的環境介紹、客家文化，點出埤塘的重要性，再帶出逐漸被人遺忘的「塘函」設施，加上實體的模型讓參與者更加直觀的理解。希望能將桃園江夏堂的故事分享給大家，並藉此宣傳塘函的構造、使用原理，以及對傳統客家文化的重要性。
+                        藉由桃園江夏堂的環境介紹與客家文化背景，我們希望讓更多人了解埤塘在地方發展與生態維護中的重要性。透過設計塘函模型與結合Line QR Code互動介紹，不僅能更生動地呈現主題，也能推廣江夏堂的文化活動。本專題以此概念參加比賽，期望喚起大家對客家文化與環境永續的重視。
+                    </span>
+                </div>
+            </article>
+            <!--經歷4-->
+            <article class="block">
+                <div class="image-slider">
+                    <button class="prev" onclick="prevSlide(this.parentElement.parentElement)">&#10094;</button>
+                    <div class="photos">
+                        <img src="image/ex_4-1.png" alt="photo1" class="photo">
+                        <img src="image/ex_4-2.png" alt="photo2" class="photo">
+                        <img src="image/ex_4-3.png" alt="photo3" class="photo">
+                        <img src="image/ex_4-4.png" alt="photo3" class="photo">
+                    </div>
+                    <button class="next" onclick="nextSlide(this.parentElement.parentElement)">&#10095;</button>
+                </div>
+                <div class="text-block">
+                    <P class="txt_2">自然科學與人工智慧-光電農業</P>
+                    <span class="txt_3">
+                        主要負責內容規劃與架構設計，整合光電技術與 AI 在智慧農業中的應用資料。具備良好的資料蒐集、邏輯整理與簡報製作能力，能獨立規劃主題並引導團隊完成報告方向。
+                    </span>
+                </div>
+            </article>
+            <!--經歷5-->
+            <article class="block">
+                <div class="image-slider">
+                    <button class="prev" onclick="prevSlide(this.parentElement.parentElement)">&#10094;</button>
+                    <div class="photos">
+                        <img src="image/ex_5-1.png" alt="photo1" class="photo">
+                        <img src="image/ex_5-2.png" alt="photo2" class="photo">
+                        <img src="image/ex_5-3.png" alt="photo3" class="photo">
+                        <img src="image/ex_5-4.png" alt="photo3" class="photo">
+                        <img src="image/ex_5-5.png" alt="photo3" class="photo">
+                    </div>
+                    <button class="next" onclick="nextSlide(this.parentElement.parentElement)">&#10095;</button>
+                </div>
+                <div class="text-block">
+                    <P class="txt_2">聊天機器人實作-中原小幫手</P>
+                    <span class="txt_3">
+                        負責設計與建置 Line 官方帳號自動回覆系統，整合中原資管系系辦資訊與活動公告。熟悉 Line Messaging API、Webhook 與伺服器串接流程，具備網頁後端整合與聊天機器人開發實作經驗。
                     </span>
                 </div>
             </article>
@@ -178,12 +215,12 @@
             <div class="image-slider2">
                 <button class="prev" onclick="prevSlide(this.parentElement.parentElement)">&#10094;</button>
                 <div class="photos2">
-                    <img src="image/Illu/001.jpg" alt="ill_1" class="photo" >
-                    <img src="image/Illu/002.jpg" alt="ill_2" class="photo">
-                    <img src="image/Illu/003.png" alt="ill_3" class="photo">
-                    <img src="image/Illu/004.png"  alt="ill_4" class="photo">
-                    <img src="image/Illu/005.png"  alt="ill_5" class="photo">
-                    <img src="image/Illu/006.png"  alt="ill_6" class="photo">
+                    <img src="image/001.jpg" alt="ill_1" class="photo" >
+                    <img src="image/002.jpg" alt="ill_2" class="photo">
+                    <img src="image/003.png" alt="ill_3" class="photo">
+                    <img src="image/004.png"  alt="ill_4" class="photo">
+                    <img src="image/005.png"  alt="ill_5" class="photo">
+                    <img src="image/006.png"  alt="ill_6" class="photo">
                 </div>
                 <button class="next" onclick="nextSlide(this.parentElement.parentElement)">&#10095;</button>
             </div>
@@ -192,9 +229,9 @@
 
         <!--底下連結-->
         <footer>
-            <a href="https://www.instagram.com/zitin.__/" title="instagram"><img src="image/logo/instagram.png" alt="instagram" width="40" height="40"></a>
-            <a href="https://www.facebook.com/520yuuki/?locale=zh_TW" title="facebook"><img src="image/logo/facebook.png" alt="facebook" width="40" height="40"></a>
-            <a href="mailto:ting94118@gmail.com" title="gmail"><img src="image/logo/gmail.png" alt="gmail" width="40" height="40"></a>
+            <a href="https://www.instagram.com/zitin.__/" title="instagram"><img src="image/instagram.png" alt="instagram" width="40" height="40"></a>
+            <a href="https://www.facebook.com/520yuuki/?locale=zh_TW" title="facebook"><img src="image/facebook.png" alt="facebook" width="40" height="40"></a>
+            <a href="mailto:ting94118@gmail.com" title="gmail"><img src="image/gmail.png" alt="gmail" width="40" height="40"></a>
         </footer>
     </div>
 
